[gd_scene load_steps=25 format=3 uid="uid://dhn4hc2tmwqkk"]

[ext_resource type="PackedScene" uid="uid://d3abq633jh74a" path="res://godot4/ui/screens/Screen.tscn" id="1_vrbqb"]
[ext_resource type="Script" uid="uid://bkbxh63c01eee" path="res://godot4/ui/screens/main_menu/MainMenuScreen.gd" id="2_k7fo1"]
[ext_resource type="PackedScene" uid="uid://tt4ep0tngmth" path="res://godot4/ui/screens/character_selection/VersusSelectionScreen.tscn" id="3_wna5r"]
[ext_resource type="PackedScene" uid="uid://2cynjxryqe8t" path="res://godot4/ui/screens/character_selection/CampaignSelectionScreen.tscn" id="4_vwu28"]
[ext_resource type="PackedScene" uid="uid://85gtnlxh82ug" path="res://godot4/ui/screens/hall_of_fame/HallOfFameScreen.tscn" id="5_bwgoe"]
[ext_resource type="PackedScene" uid="uid://c50sd4reltwxp" path="res://godot4/ui/screens/settings/SettingsScreen.tscn" id="6_rh0f1"]
[ext_resource type="PackedScene" uid="uid://biutbjggs5j80" path="res://godot4/ui/screens/credits/CreditsScreen.tscn" id="7_f8uos"]
[ext_resource type="Texture2D" uid="uid://bjcmvo37vp1sw" path="res://godot4/ui/screens/main_menu/main_menu.svg" id="8_hk5oe"]
[ext_resource type="Texture2D" uid="uid://dur6k2gx10cim" path="res://godot4/ui/screens/main_menu/background.png" id="9_ottn0"]
[ext_resource type="PackedScene" uid="uid://cklefvrbsam55" path="res://ui/fancy_menus/FancyMenu.tscn" id="10_sdory"]
[ext_resource type="PackedScene" uid="uid://bsnpuv1ss4bxe" path="res://ui/fancy_menus/FancyButton.tscn" id="11_ydftu"]
[ext_resource type="Texture2D" uid="uid://b656raodeylgn" path="res://godot4/ui/screens/main_menu/buttons/graphics_Versus.png" id="12_7gffd"]
[ext_resource type="BitMap" uid="uid://ctbc2blnip55j" path="res://godot4/ui/screens/main_menu/buttons/area_Versus.png" id="13_vkwtr"]
[ext_resource type="PackedScene" uid="uid://bfjk2jikcv4ub" path="res://utils/ShearLabel.tscn" id="14_q1uha"]
[ext_resource type="Texture2D" uid="uid://dtm6odu2dquqx" path="res://godot4/ui/screens/main_menu/buttons/graphics_HallOfFame.png" id="15_v45ox"]
[ext_resource type="BitMap" uid="uid://dq575clyd1jnt" path="res://godot4/ui/screens/main_menu/buttons/area_HallOfFame.png" id="16_ru06s"]
[ext_resource type="Texture2D" uid="uid://4nfr7d0fvskg" path="res://godot4/ui/screens/main_menu/buttons/graphics_Settings.png" id="17_oiyfm"]
[ext_resource type="BitMap" uid="uid://dvhsyedagmr8n" path="res://godot4/ui/screens/main_menu/buttons/area_Settings.png" id="18_38wqh"]
[ext_resource type="Texture2D" uid="uid://icu3hsbir54x" path="res://godot4/ui/screens/main_menu/buttons/graphics_Credits.png" id="19_ktikj"]
[ext_resource type="BitMap" uid="uid://c7s1sa31yto7h" path="res://godot4/ui/screens/main_menu/buttons/area_Credits.png" id="20_1fdvi"]
[ext_resource type="Texture2D" uid="uid://b88llv5k6scle" path="res://godot4/ui/screens/main_menu/buttons/graphics_Quit.png" id="21_b74ih"]
[ext_resource type="BitMap" uid="uid://cvyfx63uo1ksg" path="res://godot4/ui/screens/main_menu/buttons/area_Quit.png" id="22_6ve22"]

[sub_resource type="CanvasTexture" id="CanvasTexture_om3hj"]

[sub_resource type="CanvasTexture" id="CanvasTexture_br3wu"]

[node name="MainMenuScreen" instance=ExtResource("1_vrbqb")]
script = ExtResource("2_k7fo1")
versus_character_selection_scene = ExtResource("3_wna5r")
campaign_character_selection_scene = ExtResource("4_vwu28")
hall_of_fame_scene = ExtResource("5_bwgoe")
settings_scene = ExtResource("6_rh0f1")
credits_scene = ExtResource("7_f8uos")

[node name="Reference" type="TextureRect" parent="." index="0"]
visible = false
modulate = Color(0.172549, 0.431373, 0.705882, 1)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("8_hk5oe")

[node name="Background" type="TextureRect" parent="." index="1"]
modulate = Color(0.207843, 0.294118, 0.388235, 1)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("9_ottn0")

[node name="FancyMenu" parent="." index="2" instance=ExtResource("10_sdory")]
auto_neighbours = "both"
default_focused_element = NodePath("Campaign")
focus_default_element_on_ready = false

[node name="Versus" parent="FancyMenu" index="0" instance=ExtResource("11_ydftu")]
self_modulate = Color(0.984314, 0.858824, 1, 1)
layout_mode = 0
offset_left = 130.0
offset_top = 69.0
offset_right = 493.0
offset_bottom = 597.0
texture_normal = ExtResource("12_7gffd")
texture_click_mask = ExtResource("13_vkwtr")

[node name="MenuLabel" parent="FancyMenu/Versus" index="1" instance=ExtResource("14_q1uha")]
modulate = Color(0.831373, 0.396078, 1, 1)
position = Vector2(148.349, 487.427)
rotation = 0.10472
scale = Vector2(2.5, 2.5)
text = "VERSUS"
shear = Vector2(-0.1, -0.26)

[node name="PlayerCountLabel" parent="FancyMenu/Versus" index="2" instance=ExtResource("14_q1uha")]
position = Vector2(139, 562)
rotation = 0.10472
scale = Vector2(1.5, 1.5)
text = "2 3 4"
shear = Vector2(-0.1, -0.26)

[node name="Campaign" parent="FancyMenu" index="1" instance=ExtResource("11_ydftu")]
layout_mode = 0
offset_left = 478.0
offset_top = 57.0
offset_right = 758.0
offset_bottom = 542.0

[node name="MenuLabel" parent="FancyMenu/Campaign" index="1" instance=ExtResource("14_q1uha")]
modulate = Color(0.396078, 0.964706, 1, 1)
position = Vector2(129.349, 481.427)
scale = Vector2(2.5, 2.5)
text = "CO-OP"

[node name="PlayerCountLabel" parent="FancyMenu/Campaign" index="2" instance=ExtResource("14_q1uha")]
position = Vector2(125, 556)
scale = Vector2(1.5, 1.5)
text = "1 2 3 4"

[node name="HallOfFame" parent="FancyMenu" index="2" instance=ExtResource("11_ydftu")]
layout_mode = 0
offset_left = 733.0
offset_top = 47.0
offset_right = 918.0
offset_bottom = 186.0
disabled = true
texture_normal = ExtResource("15_v45ox")
texture_disabled = SubResource("CanvasTexture_om3hj")
texture_click_mask = ExtResource("16_ru06s")

[node name="MenuLabel" parent="FancyMenu/HallOfFame" index="1" instance=ExtResource("14_q1uha")]
position = Vector2(110.333, 78.6667)
scale = Vector2(1.5, 1.5)
text = "HALL OF FAME"
shear = Vector2(0.25, 0.1)
align = "left"

[node name="Settings" parent="FancyMenu" index="3" instance=ExtResource("11_ydftu")]
layout_mode = 0
offset_left = 785.0
offset_top = 185.0
offset_right = 993.0
offset_bottom = 316.0
texture_normal = ExtResource("17_oiyfm")
texture_disabled = SubResource("CanvasTexture_br3wu")
texture_click_mask = ExtResource("18_38wqh")

[node name="MenuLabel" parent="FancyMenu/Settings" index="1" instance=ExtResource("14_q1uha")]
position = Vector2(135.333, 67.6667)
scale = Vector2(1.5, 1.5)
text = "SETTINGS"
shear = Vector2(0.25, 0.1)
align = "left"

[node name="Credits" parent="FancyMenu" index="4" instance=ExtResource("11_ydftu")]
layout_mode = 0
offset_left = 841.0
offset_top = 320.0
offset_right = 1062.0
offset_bottom = 443.0
texture_normal = ExtResource("19_ktikj")
texture_click_mask = ExtResource("20_1fdvi")

[node name="MenuLabel" parent="FancyMenu/Credits" index="1" instance=ExtResource("14_q1uha")]
position = Vector2(109.455, 51.4919)
scale = Vector2(1.5, 1.5)
text = "CREDITS"
shear = Vector2(0.25, 0.1)
align = "left"

[node name="Quit" parent="FancyMenu" index="5" instance=ExtResource("11_ydftu")]
layout_mode = 0
offset_left = 894.0
offset_top = 446.0
offset_right = 1167.0
offset_bottom = 580.0
texture_normal = ExtResource("21_b74ih")
texture_click_mask = ExtResource("22_6ve22")

[node name="MenuLabel" parent="FancyMenu/Quit" index="1" instance=ExtResource("14_q1uha")]
position = Vector2(134.455, 59.4919)
scale = Vector2(1.5, 1.5)
text = "QUIT"
shear = Vector2(0.28, 0.1)
align = "left"

[connection signal="button_down" from="FancyMenu/Versus" to="." method="_on_Versus_button_down"]
[connection signal="button_down" from="FancyMenu/Campaign" to="." method="_on_Campaign_button_down"]
[connection signal="button_down" from="FancyMenu/HallOfFame" to="." method="_on_HallOfFame_button_down"]
[connection signal="button_down" from="FancyMenu/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="FancyMenu/Credits" to="." method="_on_Credits_button_down"]
[connection signal="button_down" from="FancyMenu/Quit" to="." method="_on_Quit_button_down"]
